feat(manufacturers): use openapi to get manufacturers
